RESOLVED FIXED7452
<wbr> in <pre> causes some new lines to be ignored
https://bugs.webkit.org/show_bug.cgi?id=7452
Summary <wbr> in <pre> causes some new lines to be ignored
Sam Weinig
Reported 2006-02-24 18:06:06 PST
If you get the automatic commit emails from [webkit-changes] on Gmail you probably will have seen this bug. Since the switch to the fancy formatting for the emails many lines have gone way off the page due to not line breaking, making it a pain to read. The culprit it seems, is that when the <wbr> tag is inside a <pre>, useful for, among other things, breaking long paths nicely, line endings are ignored until the end of the <pre> or another <wbr> is found.
Attachments
test case (359 bytes, text/html)
2006-02-24 18:07 PST, Sam Weinig
no flags
patch that implements proper parsing and rendering for <wbr> (115.00 KB, patch)
2007-05-09 18:03 PDT, Darin Adler
mitz: review+
Sam Weinig
Comment 1 2006-02-24 18:07:26 PST
Created attachment 6709 [details] test case Test case showing bad behavior. In Firefox, the line break is made.
mitz
Comment 2 2006-08-31 10:25:23 PDT
See also bug 10657.
Darin Adler
Comment 3 2007-05-09 15:36:07 PDT
Darin Adler
Comment 4 2007-05-09 18:03:23 PDT
Created attachment 14449 [details] patch that implements proper parsing and rendering for <wbr>
mitz
Comment 5 2007-05-10 13:41:52 PDT
Comment on attachment 14449 [details] patch that implements proper parsing and rendering for <wbr> +++ WebCore/dom/Node.cpp (working copy) Please include the changes to Node.cpp in the change log. Did you actually hit a case where createRenderer() returned 0 despite rendererIsNeeded() returning true? If not, can you replace or augment the if(r) with an ASSERT(r)? What's the following all about? Property changes on: LayoutTests/fast/text/wbr.html ___________________________________________________________________ Name: svn:executable + * r=me
Darin Adler
Comment 6 2007-05-10 13:54:47 PDT
> Please include the changes to Node.cpp in the change log. Did you actually hit > a case where createRenderer() returned 0 despite rendererIsNeeded() returning > true? If not, can you replace or augment the if(r) with an ASSERT(r)? I crashed while running layout tests. I didn't investigate this in great detail, and I forgot about it completely! I thought it was an obvious mistake that there was a null check on one line and no null check on the next line. > What's the following all about? [executable flag on some files] Not sure -- obviously my mistake.
Darin Adler
Comment 7 2007-05-11 09:11:52 PDT
Committed revision 21405.
Note You need to log in before you can comment on or make changes to this bug.